[package]
name = "mapping_engine"
version = "0.1.0"
edition = "2021"
authors = ["sryu <liuzhihao0206@gmail.com>"]
license = "MIT"

[dependencies]
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
serde_yaml   = "0.9"
jsonpath_lib = "0.3"
thiserror    = "1.0"
rhai         = { version = "1", features = ["serde"], optional = true }
tera         = { version = "1", optional = true }

[features]
default = ["expr", "template"]
expr    = ["rhai"]
template = ["tera"]